update Rmd files

--- a/R/figure4to6.Rmd
+++ b/R/figure4to6.Rmd
@@ -5,7 +5,7 @@ output: html_document
 ---
 
 ```{r global_options, include=FALSE}
-knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
+knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE, fig.width=9)
 ```
 
 ```{r setup}
@@ -15,49 +15,36 @@ library(readxl)
 library(RColorBrewer)
 library(gridExtra)
 
-# read in original unedited data
-journal <- read_excel("../1science/1figr_U_Virginia_Original.xlsx", 
-                      sheet = 4, 
-                      skip = 8)
-
-# rename variables in journal
-names(journal) <- c("sort", "journal", "issn", "provider", "type", "fig1", "jr1", "jr5", 
-                    "cites", "pubs", "synth", "jtier", "subtier", "dupes",
-                    "oa", "oaper", "fig2", "scopus", "arif", "domain", "field", "subfield", 
-                    "pub2008", "pub2009", "pub2010", "pub2011", "pub2012", "pub2013", "pub2014",
-                    "pub2015", "pub2016", "pub2017", "cite2008", "cite2009", "cite2010", "cite2011",
-                    "cite2012", "cite2013", "cite2014", "cite2015", "cite2016", "cite2017", 
-                    "oa2008", "oa2009", "oa2010", "oa2011", "oa2012", "oa2013", "oa2014", "oa2015", 
-                    "oa2016", "oa2017", "oaper2008", "oaper2009", "oaper2010", "oaper2011", "oaper2012",
-                    "oaper2013", "oaper2014", "oaper2015", "oaper2016", "oaper2017", "scopus2008",
-                    "scopus2009", "scopus2010", "scopus2011", "scopus2012", "scopus2013", "scopus2014",
-                    "scopus2015", "scopus2016", "scopus2017", "jr12015", "jr12016", "jr12017", "jr12018",
-                    "jid", "journalname")
-
-
-# derive Current Year Use Percentage - currentper
-# derive % of papers referenced by UVA - citeper
-# derive UVA Papers % of total - pubsper
-
-journal <- journal %>% 
-  mutate(jr5 = if_else(jr5 == "N/A", NA_character_, jr5),
-         jr1 = if_else(jr1 == "N/A", NA_character_, jr1),
-         currentper = as.numeric(jr5)/as.numeric(jr1),
-         citeper = if_else(!is.finite(cites/scopus),0,cites/scopus),
-         pubsper = if_else(!is.finite(pubs/scopus),0,pubs/scopus)) 
-
-# derive Downloads JR1 2015-2018
-journal <- journal %>% 
-  mutate_if(str_detect(names(journal), pattern = "^jr120"), 
-            ~as.numeric(if_else(. == "N/A", "0", .))) %>% 
-  mutate(jr12015_2018 = jr12015 + jr12016 + jr12017 + jr12018) %>% 
-  select(sort:jr5, currentper, cites, citeper, pubs, pubsper,
-         synth:jr12018,jr12015_2018,jid, journalname)
+journal <- readRDS("../1science/journal.rds")
 
 # keep only package data for big 5
 big5 <- journal %>% 
   select(provider, type, pub2008:jr12018) %>% 
   filter(type == "Package" & provider %in% c("Springer", "Elsevier", "Wiley", "Sage", "Taylor & Francis"))
+
+# keep only package data for big 5
+big5 <- journal %>% 
+  # select(provider, type, pub2008:jr12018) %>% 
+  select(provider, type, pub2008:oa2017, scopus2008:scopus2017) %>% 
+  filter(type == "Package" & provider %in% c("Springer", "Elsevier", "Wiley", "Sage", "Taylor & Francis")) %>% 
+  select(-type)
+
+# create a big 6 data frame (two Elseviers: Freedom and Subscribed)
+els2 <- journal %>% 
+  # select(provider, type, pub2008:jr12018) %>% 
+  select(provider2, type, pub2008:oa2017, scopus2008:scopus2017) %>% 
+  filter(type == "Journal" & provider2 %in% c("Elsevier Freedom", "Elsevier Subscribed")) %>% 
+  group_by(provider2) %>% 
+  summarise_if(is.double, sum, na.rm = TRUE) %>% 
+  rename(provider = provider2)
+
+big6 <- bind_rows(big5, els2) %>% 
+  filter(provider != "Elsevier") %>% 
+  mutate(elsevier = if_else(str_detect(provider, "Elsevier"), 1, 0)) %>% 
+  select(provider, elsevier, everything())
+
+rm(els2)
+
 
 # function to grab legend to use in common
 get_legend<-function(myggplot){
@@ -66,11 +53,26 @@ get_legend<-function(myggplot){
   legend <- tmp$grobs[[leg]]
   return(legend)
 }
+
+# function to generate 3 plots + legend
+plot_grid <- function(p1, p2, p3){
+  legend <- get_legend(p2)
+  p1 <- p1 + theme(legend.position="none")
+  p2 <- p2 + theme(legend.position="none")
+  p3 <- p3 + theme(legend.position="none")
+  grid.arrange(p1, p2, p3, legend, ncol = 2)
+}
+
+# color palette with 2 reds for Elsevier Free and Sub
+# #E41A1C - red for Elsevier
+pal <- c("#E41A1C", brewer.pal(n = 5, name = "Set1"))
+
+
 ```
 
 ## UVA References, UVA Publications, and OA-Available Articles, 2008-2017
 
-### 4. UVA References in Big 5 Provider Journals over Time
+### 4a. UVA References in Big 5 Provider Journals over Time
 ```{r}
 # 4. Number of uva citations in Big 5 as percent of citations over time
 # reshape time data to long format: pub2008-pub2017, tot2008-tot2017
@@ -88,7 +90,7 @@ totalref <- journal %>%
          tot2012 = sum(cite2012), tot2013 = sum(cite2013),
          tot2014 = sum(cite2014), tot2015 = sum(cite2015),
          tot2016 = sum(cite2016), tot2017 = sum(cite2017)) %>% 
-  filter(provider == "Elsevier") %>% 
+  filter(provider == "Elsevier") %>%  
   select(tot2008:tot2017) %>% 
   pivot_longer(tot2008:tot2017, 
                names_to = c(".value", "year"),
@@ -96,8 +98,8 @@ totalref <- journal %>%
 
 # join totalref and create uva percent and indicator for Elsevier
 big5ref <- full_join(big5ref, totalref, by = "year") %>% 
-  mutate(uvaper = (cite/tot)*100,
-         els = if_else(provider == "Elsevier", "Yes", "No"))
+  mutate(uvaper = (cite/tot)*100)
+
 
 # plot uva percent
 p1 <- ggplot(totalref, aes(x = year, y = tot, group = 1)) + 
@@ -109,141 +111,206 @@ p1 <- ggplot(totalref, aes(x = year, y = tot, group = 1)) +
 
 p2 <- ggplot(big5ref, aes(x = year, y = cite, group = provider)) +
   geom_line(aes(color = provider)) +
-  scale_color_brewer(type = "qual", palette = "Set1") +
+  scale_color_brewer("Provider", type = "qual", palette = "Set1") +
   labs(title = "References by UVA Authors",
        subtitle = "In Big 5 Providers",
-       x = "Year", y = "Number of References", color = "Provider")
+       x = "Year", y = "Number of References")
 
 p3 <- ggplot(big5ref, aes(x = year, y = uvaper, group = provider)) +
   geom_line(aes(color = provider)) +
-  scale_color_brewer(type = "qual", palette = "Set1") +
+  scale_color_brewer("Provider", type = "qual", palette = "Set1") +
   labs(title = "Percent of All References by UVA Authors",
        subtitle = "In Big 5 Providers",
-       x = "Year", y = "Percent of References", color = "Provider")
+       x = "Year", y = "Percent of References")
 
-# function to grab legend to use in common
-get_legend<-function(myggplot){
-  tmp <- ggplot_gtable(ggplot_build(myggplot))
-  leg <- which(sapply(tmp$grobs, function(x) x$name) == "guide-box")
-  legend <- tmp$grobs[[leg]]
-  return(legend)
-}
-
-# use the get_legend function
-legend <- get_legend(p2)
-p1 <- p1 + theme(legend.position="none")
-p2 <- p2 + theme(legend.position="none")
-p3 <- p3 + theme(legend.position="none")
-
-grid.arrange(p1, p2, p3, legend, ncol = 2)
+# create plot
+plot_grid(p1, p2, p3)
 ```
 
 Figure 4 provides trends in citations to the Big 5 providers by UVA authors over time. The top panels reveal an overall growth in research output by UVA researchers, and therefore in citations. The lower panel, showing citations to each provider as a percentage of total citations by UVA authors, suggests that citations to Elsevier titles represent a relatively larger portion of citations relative to the others. This proportion has been flat (if not very slightly in decline) for most of the decade.
 
-### 5. UVA Publications in Big 5 Provider Journals over Time
-```{r}
+### 4b. UVA References in Big 5 Provider Journals over Time
+
+Same figure as above with Elsevier broken down by Freedom versus Subscribed.
+
+```{r }
+# Big 6 (Elsevier Free and Elsevier Subscribed)
+big6ref <- big6 %>% 
+  select(provider, cite2008:cite2017) %>% 
+  pivot_longer(-provider, 
+               names_to = c(".value", "year"),
+               names_sep = -4) %>% 
+  full_join(totalref, by = "year") %>% 
+  mutate(uvaper = (cite/tot)*100,
+         els = if_else(str_detect(provider,"Freedom"), "Yes", "No"))
+
+
+# plot uva percent
+p2 <- ggplot(big6ref, aes(x = year, y = cite, group = provider)) +
+  geom_line(aes(color = provider, linetype = provider)) +
+  scale_color_manual("Provider", values = pal) +
+  scale_linetype_manual("Provider", values = c(2,1,1,1,1,1)) +
+  labs(title = "References by UVA Authors",
+       subtitle = "In Big 5 Providers",
+       x = "Year", y = "Number of References")
+
+p3 <- ggplot(big6ref, aes(x = year, y = uvaper, group = provider)) +
+  geom_line(aes(color = provider, linetype = provider)) +
+  scale_color_manual("Provider", values = pal) +
+  scale_linetype_manual("Provider", values = c(2,1,1,1,1,1)) +
+  labs(title = "Percent of All References by UVA Authors",
+       subtitle = "In Big 5 Providers",
+       x = "Year", y = "Percent of References")
+
+# create plot
+plot_grid(p1, p2, p3)
+```
+
+
+
+### 5a. UVA Publications in Big 5 Provider Journals over Time
+```{r }
 # 5. Number of uva-authored publications and percent of uva-authored publications in Big 5 over time
 # reshape time data to long format: pub2008-pub2017, scopus2008-scopus2017
 big5pub <- big5 %>% 
   select(provider, pub2008:pub2017, scopus2008:scopus2017) %>% 
   pivot_longer(-provider, 
                names_to = c(".value", "year"),
-               names_sep = -4)
+               names_sep = -4) %>% 
+  mutate(uvaper = (pub/scopus)*100)
 
-# create uva percent and indicator for Elsevier
-big5pub <- big5pub %>% 
+# Big 6 (Elsevier Free and Elsevier Subscribed)
+big6pub <- big6 %>% 
+  select(provider, pub2008:pub2017, scopus2008:scopus2017) %>% 
+  pivot_longer(-provider, 
+               names_to = c(".value", "year"),
+               names_sep = -4) %>%  
   mutate(uvaper = (pub/scopus)*100,
-         els = if_else(provider == "Elsevier", "Yes", "No"))
+         els = if_else(str_detect(provider,"Freedom"), "Yes", "No"))
 
-# plot uva percent
-p1 <- ggplot(big5pub, aes(x = year, y = scopus, group = provider)) + 
-  geom_line(aes(color = provider)) +
-  scale_linetype_manual(values=c("longdash", "solid"), guide=F) +
-  scale_y_continuous(labels = scales::comma) + 
-  labs(title = "Total Number of Articles Published",
-       subtitle = "In Big 5 Providers",
-       x = "Year", y = "Number of Articles", color = "Provider")
 
-p2 <- ggplot(big5pub, aes(x = year, y = pub, group = provider)) +
-  geom_line(aes(color = provider)) +
-  scale_color_brewer(type = "qual", palette = "Set1") +
-  labs(title = "Number of Articles by UVA Authors",
-       subtitle = "In Big 5 Providers",
-       x = "Year", y = "Number of Articles", color = "Provider")
 
-p3 <- ggplot(big5pub, aes(x = year, y = uvaper, group = provider)) +
-  geom_line(aes(color = provider)) +
-  scale_color_brewer(type = "qual", palette = "Set1") +
-  labs(title = "Percent of Articles by UVA Authors",
-       subtitle = "In Big 5 Providers",
-       x = "Year", y = "Percent of Articles", color = "Provider")
+# define plot function
+plot_fn <- function(data, y, title, ylab, big6 = FALSE){
+  y <- enquo(y)
+  p <- ggplot(data, aes(x = year, y = !! y, group = provider))
+    if(!big6) {
+      p <- p + geom_line(aes(color = provider)) +
+        scale_color_brewer(type = "qual", palette = "Set1")
+    } else {
+      p <- p + geom_line(aes(color = provider, linetype = provider)) +
+        scale_color_manual("Provider", values = pal) +
+        scale_linetype_manual("Provider", values = c(2,1,1,1,1,1))
+    } 
+  p + labs(title = title,
+           subtitle = "In Big 5 Providers",
+           x = "Year", y = ylab, color = "Provider")
+}
+  
+p1 <- plot_fn(big5pub, y = scopus, ylab = "Number of Articles",
+             title = "Total Number of Articles Published") + 
+  scale_y_continuous(labels = scales::comma) 
+p2 <- plot_fn(big5pub, y = pub, ylab = "Number of Articles",
+             title = "Number of Articles by UVA Authors")
+p3 <- plot_fn(big5pub, y = uvaper, ylab = "Percent of Articles",
+             title = "Percent of All Articles by UVA Authors")
 
-# use the get_legend function
-legend <- get_legend(p1)
-p1 <- p1 + theme(legend.position="none")
-p2 <- p2 + theme(legend.position="none")
-p3 <- p3 + theme(legend.position="none")
-
-grid.arrange(p1, p2, p3, legend, ncol = 2)
+# create big 5 plot
+plot_grid(p1, p2, p3)
 ```
 
 The top panel indicates that Elsevier and Springer have been publishing more articles over time; at the same time, UVA authors are publishing more articles in the journals provided by Elsevier and Spring. Consequently, the relative amount of UVA work published in Elsevier journals isstable over the last decade. 
 
 
-### 6. OA-Available Articles in Big 5 Provider Journals over Time
+### 5b. UVA Publications in Big 5 Provider Journals over Time
 
-```{r}
+Same figure as above with Elsevier broken down by Freedom versus Subscribed.
+
+```{r }
+p1 <- plot_fn(big6pub, y = scopus, ylab = "Number of Articles",
+             title = "Total Number of Articles Published", 
+             big6 = TRUE) + 
+  scale_y_continuous(labels = scales::comma) 
+p2 <- plot_fn(big6pub, y = pub, ylab = "Number of Articles",
+             title = "Number of Articles by UVA Authors", 
+             big6 = TRUE)
+p3 <- plot_fn(big6pub, y = uvaper, ylab = "Percent of Articles",
+             title = "Percent of All Articles by UVA Authors", 
+             big6 = TRUE)
+
+# create big 6 plot
+plot_grid(p1, p2, p3)
+
+```
+
+
+### 6a. OA-Available Articles in Big 5 Provider Journals over Time
+
+```{r }
 # 6. Number of oa-available publications and percent of oa-available publications in Big 5 over time
 # reshape time data to long format: oa2008-ao2017, scopus2008-scopus2017
 big5oa <- big5 %>% 
   select(provider, oa2008:oa2017, scopus2008:scopus2017) %>% 
   pivot_longer(-provider, 
                names_to = c(".value", "year"),
-               names_sep = -4)
+               names_sep = -4) %>% 
+  mutate(oaper = (oa/scopus)*100)
 
-# create oa percent
-big5oa <- big5oa %>% 
+big6oa <- big6 %>% 
+  select(provider, oa2008:oa2017, scopus2008:scopus2017) %>% 
+  pivot_longer(-provider, 
+               names_to = c(".value", "year"),
+               names_sep = -4) %>% 
   mutate(oaper = (oa/scopus)*100,
-         els = if_else(provider == "Elsevier", "Yes", "No"))
+         els = if_else(str_detect(provider,"Freedom"), "Yes", "No"))
 
-# plot
-# plot uva percent
-p1 <- ggplot(big5oa, aes(x = year, y = scopus, group = provider)) + 
-  geom_line(aes(color = provider)) +
-  scale_color_brewer(type = "qual", palette = "Set1") +
-  scale_y_continuous(labels = scales::comma) + 
-  labs(title = "Number of Articles Published",
-       subtitle = "In Big 5 Providers",
-       x = "Year", y = "Number of Articles", color = "Provider")
 
-p2 <- ggplot(big5oa, aes(x = year, y = oa, group = provider)) +
-  geom_line(aes(color = provider)) +
-  scale_color_brewer(type = "qual", palette = "Set1") +
-  labs(title = "Number of OA-Available Articles",
-       subtitle = "In Big 5 Providers",
-       x = "Year", y = "Number of Articles", color = "Provider")
-
-# labels to add 2017 values at end of lines
+# labels to add 2017 values at end of lines - big 5
 p3_labels <- big5oa %>% 
   group_by(provider) %>% 
   filter(year == "2017") %>% 
   mutate(oaper = round(oaper))
 
-p3 <- ggplot(big5oa, aes(x = year, y = oaper, group = provider)) +
-  geom_line(aes(color = provider)) +
-  scale_color_brewer(type = "qual", palette = "Set1") +
-  geom_text(aes(x = year, y = oaper, label = oaper), p3_labels, nudge_x = 0.2) +
-  labs(title = "Percent of OA-Available Articles",
-       subtitle = "In Big 5 Providers",
-       x = "Year", y = "Percent of Articles", color = "Provider")
+# labels to add 2017 values at end of lines - big 6
+p3_labels2 <- big6oa %>% 
+  group_by(provider) %>% 
+  filter(year == "2017") %>% 
+  mutate(oaper = round(oaper))
 
-# use the function
-legend <- get_legend(p1)
-p1 <- p1 + theme(legend.position="none")
-p2 <- p2 + theme(legend.position="none")
-p3 <- p3 + theme(legend.position="none")
 
-grid.arrange(p1, p2, p3, legend, ncol = 2)
+p1 <- plot_fn(big5oa, y = scopus, ylab = "Number of Articles",
+              title = "Number of Articles Published") + 
+  scale_y_continuous(labels = scales::comma) 
+p2 <- plot_fn(big5oa, y = oa, ylab = "Number of Articles",
+              title = "Number of OA-Available Articles")
+p3 <- plot_fn(big5oa, y = oaper, ylab = "Percent of Articles",
+              title = "Percent of OA-Available Articles") +
+  geom_text(aes(x = year, y = oaper, label = oaper), p3_labels, nudge_x = 0.2)
+
+# create big 5 plot
+plot_grid(p1, p2, p3)
 ```
 
 The top panel, again, indicates that Elsevier and Springer have been publishing more articles over time, and the number of OA-available articles in these providers' titles has been increasing as well. The drop off in OA availability for more recent content likely reflects the rolling embargo window imposed by vendors. Piwowar et al. found in a study of national OA availability trends that OA availability is increasing in recent years, and that for the most recent year they studied, 2015, 45% of the articles were available in OA versions. However, it seems that this percentage varies strongly depending on the provider, with Elsevier and Taylor & Francis keeping more of their content behind paywalls.
+
+### 6b. OA-Available Articles in Big 5 Provider Journals over Time
+
+Same figure as above with Elsevier broken down by Freedom versus Subscribed.
+
+```{r }
+p1 <- plot_fn(big6oa, y = scopus, ylab = "Number of Articles",
+              title = "Total Number of Articles Published", 
+              big6 = TRUE) + 
+  scale_y_continuous(labels = scales::comma) 
+p2 <- plot_fn(big6oa, y = oa, ylab = "Number of Articles",
+              title = "Number of Articles by UVA Authors", 
+              big6 = TRUE)
+p3 <- plot_fn(big6oa, y = oaper, ylab = "Percent of Articles",
+              title = "Percent of All Articles by UVA Authors", 
+              big6 = TRUE) +
+  geom_text(aes(x = year, y = oaper, label = oaper), p3_labels2, nudge_x = 0.2)
+
+# create big 6 plot
+plot_grid(p1, p2, p3)
+```
+
