--- a/R/figure7.Rmd
+++ b/R/figure7.Rmd
@@ -5,7 +5,7 @@ output: html_document
 ---
 
 ```{r global_options, include=FALSE}
-knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
+knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE, fig.width = 8)
 ```
 
 ```{r setup}
@@ -18,44 +18,8 @@ library(scales)
 library(readxl)
 library(RColorBrewer)
 
-# read in original unedited data
-journal <- read_excel("../1science/1figr_U_Virginia_Original.xlsx", 
-                      sheet = 4, 
-                      skip = 8)
+journal <- readRDS("../1science/journal.rds")
 
-# rename variables in journal
-names(journal) <- c("sort", "journal", "issn", "provider", "type", "fig1", "jr1", "jr5", 
-                    "cites", "pubs", "synth", "jtier", "subtier", "dupes",
-                    "oa", "oaper", "fig2", "scopus", "arif", "domain", "field", "subfield", 
-                    "pub2008", "pub2009", "pub2010", "pub2011", "pub2012", "pub2013", "pub2014",
-                    "pub2015", "pub2016", "pub2017", "cite2008", "cite2009", "cite2010", "cite2011",
-                    "cite2012", "cite2013", "cite2014", "cite2015", "cite2016", "cite2017", 
-                    "oa2008", "oa2009", "oa2010", "oa2011", "oa2012", "oa2013", "oa2014", "oa2015", 
-                    "oa2016", "oa2017", "oaper2008", "oaper2009", "oaper2010", "oaper2011", "oaper2012",
-                    "oaper2013", "oaper2014", "oaper2015", "oaper2016", "oaper2017", "scopus2008",
-                    "scopus2009", "scopus2010", "scopus2011", "scopus2012", "scopus2013", "scopus2014",
-                    "scopus2015", "scopus2016", "scopus2017", "jr12015", "jr12016", "jr12017", "jr12018",
-                    "jid", "journalname")
-
-
-# derive Current Year Use Percentage - currentper
-# derive % of papers referenced by UVA - citeper
-# derive UVA Papers % of total - pubsper
-
-journal <- journal %>% 
-  mutate(jr5 = if_else(jr5 == "N/A", NA_character_, jr5),
-         jr1 = if_else(jr1 == "N/A", NA_character_, jr1),
-         currentper = as.numeric(jr5)/as.numeric(jr1),
-         citeper = if_else(!is.finite(cites/scopus),0,cites/scopus),
-         pubsper = if_else(!is.finite(pubs/scopus),0,pubs/scopus)) 
-
-# derive Downloads JR1 2015-2018
-journal <- journal %>% 
-  mutate_if(str_detect(names(journal), pattern = "^jr120"), 
-            ~as.numeric(if_else(. == "N/A", "0", .))) %>% 
-  mutate(jr12015_2018 = jr12015 + jr12016 + jr12017 + jr12018) %>% 
-  select(sort:jr5, currentper, cites, citeper, pubs, pubsper,
-         synth:jr12018,jr12015_2018,jid, journalname)
 ```
 
 ## Use by Domain
@@ -67,18 +31,16 @@ Use of a provider's journal differs by research domain. The following figures sh
 # USE OF ELSEVIER BY DOMAIN ----
 # ----------------------------------------------
 # keep only elsevier
+# keep only elsevier
 els <- journal %>% 
-  select(journal, provider, type, jr1, jr5, cites, pubs, synth, scopus, domain, field, jid) %>% 
+  select(journal, provider, provider2, type, jr1, jr5, cites, pubs, domain) %>% 
   filter(type == "Journal" & provider == "Elsevier") %>% 
   mutate(jr1 = as.integer(jr1), jr5 = as.integer(jr5))
 
 # group/summarize by domain
 els_group <- els %>% 
   group_by(domain) %>% 
-  summarize(titles = n(),
-            titlesjr1 = sum(!is.na(jr1)),
-            titlesjr5 = sum(!is.na(jr5)),
-            jr1 = sum(jr1, na.rm = TRUE),
+  summarize(jr1 = sum(jr1, na.rm = TRUE),
             jr5 = sum(jr5, na.rm = TRUE),
             refs = sum(cites, na.rm = TRUE),
             pubs = sum(pubs, na.rm = TRUE)) %>% 
@@ -107,6 +69,7 @@ els_group %>%
   geom_segment(aes(x = domain, xend = domain, y = 0, yend = jr1), color = "grey", size = 1) +
   geom_point(size = 5) +
   scale_color_brewer(palette = "BuPu", direction = 1) +
+  scale_y_continuous(labels = scales::comma) +
   labs(title = "All 2017 Downloads from Elsevier Journals",
        subtitle = "By Article Domain",
        x = "", y = "Number of Downloads") +
@@ -179,3 +142,83 @@ els_group %>%
 ```
 
 For articles published in Elsevier journals from 2008 to 2017 by UVA authors, `r percent(percentspub[5])` are made to articles in the health science domain.
+
+
+## Elsevier Freedom versus Elsevier Subscribed
+
+Elsevier broken down by Freedom collection and Subscribed collection. The Freedom Collection is a list of ~1850 active titles (2350 titles in all, including renamed, transferred, discontinued and forthcoming titles) that any institution subscribing to Science Direct Complete gets access to.
+
+```{r}
+els_group2 <- els %>% 
+  group_by(domain, provider2) %>% 
+  summarize(jr1 = sum(jr1, na.rm = TRUE),
+            jr5 = sum(jr5, na.rm = TRUE),
+            refs = sum(cites, na.rm = TRUE),
+            pubs = sum(pubs, na.rm = TRUE)) %>% 
+  ungroup() %>% 
+  mutate(domain = factor(domain))
+
+# Two colors taken from brewer.pal(n = 7, name = "BuPu")
+pal <- c("#8C96C6", "#6E016B")
+
+plot_fn2 <- function(x, title){
+  x <- enquo(x)
+  
+  # get lables for plot
+  right_label <- els_group2 %>%
+    select(domain, provider2, !! x) %>% 
+    group_by(domain) %>%
+    arrange(desc(!! x)) %>%
+    top_n(1, wt = !! x)
+  left_label <- els_group2 %>%
+    select(domain, provider2, !! x) %>% 
+    group_by(domain) %>%
+    arrange(desc(!! x)) %>%
+    slice(2) %>% 
+    arrange(desc(!! x))
+
+  # set x-axis plot limits  
+  ymax <- els_group2 %>% summarise(ymax = max(!! x)) %>% pull() * 1.15
+  ymin <- els_group2 %>% summarise(ymin = max(!! x)) %>% pull() * -0.1
+  
+  # generate the plot
+  els_group2 %>% 
+    mutate(domain = fct_reorder(domain, !! x)) %>% 
+    ggplot(aes(x = !! x, y = domain)) +
+    geom_line(aes(group = domain)) +
+    geom_point(aes(color = provider2), size = 2) +
+    geom_text(data = right_label, aes(color = provider2, label = scales::comma(!! x)),
+              size = 3, hjust = -.5, show.legend = F) +
+    geom_text(data = left_label, aes(color = provider2, label = scales::comma(!! x)),
+              size = 3, hjust = 1.5, show.legend = F) +
+    scale_x_continuous(labels = scales::comma, limits = c(ymin, ymax)) +
+    scale_color_manual("", values = pal) +
+    labs(title = title,
+         subtitle = "By Article Domain",
+         x = "Number of Downloads", y = "") 
+}
+
+
+```
+
+
+### 7e. All Article Downloads by Domain
+```{r}
+plot_fn2(jr1, title = "All 2017 Downloads from Elsevier Journals")
+```
+
+### 7f. Current Year Article Downloads by Domain
+```{r}
+plot_fn2(jr5, title = "Current Year 2017 Downloads from Elsevier Journals")
+```
+
+### 7g. UVA References by Domain
+```{r}
+plot_fn2(refs, title = "UVA References in Elsevier Journals")
+```
+
+### 7h. UVA-Authored Publications by Domain
+```{r}
+plot_fn2(pubs, title = "UVA-Authored Publications in Elsevier Journals")
+```
+
