--- a/R/figure1.Rmd
+++ b/R/figure1.Rmd
@@ -12,48 +12,89 @@ knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
 library(tidyverse)
 library(RColorBrewer)
 library(scales)
-library(readxl)
 
-# read in original unedited data
-journal <- read_excel("../1science/1figr_U_Virginia_Original.xlsx", 
-                      sheet = 4, 
-                      skip = 8)
-
-# rename variables in journal
-names(journal) <- c("sort", "journal", "issn", "provider", "type", "fig1", "jr1", "jr5", 
-                         "cites", "pubs", "synth", "jtier", "subtier", "dupes",
-                         "oa", "oaper", "fig2", "scopus", "arif", "domain", "field", "subfield", 
-                         "pub2008", "pub2009", "pub2010", "pub2011", "pub2012", "pub2013", "pub2014",
-                         "pub2015", "pub2016", "pub2017", "cite2008", "cite2009", "cite2010", "cite2011",
-                         "cite2012", "cite2013", "cite2014", "cite2015", "cite2016", "cite2017", 
-                         "oa2008", "oa2009", "oa2010", "oa2011", "oa2012", "oa2013", "oa2014", "oa2015", 
-                         "oa2016", "oa2017", "oaper2008", "oaper2009", "oaper2010", "oaper2011", "oaper2012",
-                         "oaper2013", "oaper2014", "oaper2015", "oaper2016", "oaper2017", "scopus2008",
-                         "scopus2009", "scopus2010", "scopus2011", "scopus2012", "scopus2013", "scopus2014",
-                         "scopus2015", "scopus2016", "scopus2017", "jr12015", "jr12016", "jr12017", "jr12018",
-                         "jid", "journalname")
-
-
-# derive Current Year Use Percentage - currentper
-# derive % of papers referenced by UVA - citeper
-# derive UVA Papers % of total - pubsper
-
-journal <- journal %>% 
-  mutate(jr5 = if_else(jr5 == "N/A", NA_character_, jr5),
-         jr1 = if_else(jr1 == "N/A", NA_character_, jr1),
-         currentper = as.numeric(jr5)/as.numeric(jr1),
-         citeper = if_else(!is.finite(cites/scopus),0,cites/scopus),
-         pubsper = if_else(!is.finite(pubs/scopus),0,pubs/scopus)) 
-
-# derive Downloads JR1 2015-2018
-journal <- journal %>% 
-  mutate_if(str_detect(names(journal), pattern = "^jr120"), 
-            ~as.numeric(if_else(. == "N/A", "0", .))) %>% 
-  mutate(jr12015_2018 = jr12015 + jr12016 + jr12017 + jr12018) %>% 
-  select(sort:jr5, currentper, cites, citeper, pubs, pubsper,
-         synth:jr12018,jr12015_2018,jid, journalname)
+journal <- readRDS("../1science/journal.rds")
   
 ```
+
+
+```{r functions}
+# function to get high use counts
+highuse_fn <- function(group_var){
+  group_var <- enquo(group_var)
+  
+  journal %>% 
+    select(journal, provider, provider2, type, jr1, jr5, cites, pubs, synth, scopus, domain, field, jid) %>% 
+    filter(type == "Journal") %>% 
+    mutate(provider = factor(provider),
+           big5 = if_else(provider %in% c("Springer", "Elsevier", "Wiley", "Sage", "Taylor & Francis"), "Yes", "No"),
+           els = if_else(provider == "Elsevier", "Yes", "No")) %>% 
+    mutate(jr1 = as.integer(jr1), jr5 = as.integer(jr5)) %>% 
+    group_by(!! group_var) %>% 
+    arrange(!! group_var, desc(jr1)) %>% 
+    mutate(cum_jr1 = cumsum(jr1),
+           prov_jr1 = max(cum_jr1, na.rm=T),
+           cum_jr1_per = (cum_jr1/prov_jr1)*100,
+           use_jr1 = case_when(cum_jr1_per <= 80 ~ "JR80 Titles",
+                               cum_jr1_per > 80 & cum_jr1_per <= 90 ~ "JR90 Titles",
+                               cum_jr1_per > 90 & cum_jr1_per <= 95 ~ "JR95 Titles",
+                               TRUE ~ "Remaining Titles")) %>% 
+    arrange(!! group_var, desc(jr5)) %>%
+    mutate(cum_jr5 = cumsum(jr5),
+           prov_jr5 = max(cum_jr5, na.rm=T),
+           cum_jr5_per = (cum_jr5/prov_jr5)*100,
+           use_jr5 = case_when(cum_jr5_per <= 80 ~ "JR80 Titles",
+                               cum_jr5_per > 80 & cum_jr5_per <= 90 ~ "JR90 Titles",
+                               cum_jr5_per > 90 & cum_jr5_per <= 95 ~ "JR95 Titles",
+                               TRUE ~ "Remaining Titles")) %>% 
+    arrange(!! group_var, desc(cites)) %>% 
+    mutate(cum_refs = cumsum(cites),
+           prov_refs = max(cum_refs, na.rm=T),
+           cum_refs_per = (cum_refs/prov_refs)*100,
+           use_refs = case_when(cum_refs_per <= 80 ~ "JR80 Titles",
+                                cum_refs_per > 80 & cum_refs_per <= 90 ~ "JR90 Titles",
+                                cum_refs_per > 90 & cum_refs_per <= 95 ~ "JR95 Titles",
+                                TRUE ~ "Remaining Titles")) %>% 
+    arrange(!! group_var, desc(pubs)) %>% 
+    mutate(cum_pubs = cumsum(pubs),
+           prov_pubs = max(cum_pubs, na.rm=T),
+           cum_pubs_per = (cum_pubs/prov_pubs)*100,
+           use_pubs = case_when(cum_pubs_per <= 80 ~ "JR80 Titles",
+                                cum_pubs_per > 80 & cum_pubs_per <= 90 ~ "JR90 Titles",
+                                cum_pubs_per > 90 & cum_pubs_per <= 95 ~ "JR95 Titles",
+                                TRUE ~ "Remaining Titles"))  
+}
+
+# Function to create figures
+
+fig1 <- function(use, provider, title, subtitle){
+  use <- enquo(use)
+  provider <- enquo(provider)
+  highuse_counts <- highuse %>%
+    mutate(!! use := factor(!! use, levels = c("JR80 Titles", "JR90 Titles", "JR95 Titles", "Remaining Titles"))) %>% 
+    filter(big5 == "Yes") %>% 
+    count(!! provider, !! use) %>% 
+    mutate(pct=n/sum(n), ypos = cumsum(pct))
+  
+  assign(x = "highuse_counts", highuse_counts, envir = .GlobalEnv)
+  
+  highuse_counts %>% 
+    ggplot(aes(x = !! provider, y = pct, fill = fct_rev(!! use))) +
+    geom_col() +
+    scale_y_continuous(labels = scales::percent) +
+    scale_fill_brewer(type = 'seq', palette = 'BuPu') +
+    labs(title = title,
+         subtitle = subtitle,
+         x = "", y = "Percent") +
+    geom_text(aes(label=paste0(n), y=ypos - 0.05)) +
+    guides(fill = guide_legend(reverse=TRUE, title = NULL)) +
+    theme(legend.position = "bottom") +
+    coord_flip()
+}
+
+
+```
+
 
 ## High Use Journals
 We began by evaluating the proportion of highly-used titles in 2017 within the Big 5 provider packages: the journals that account for the top X% of use, examined through multiple proxies for “use”, including 
@@ -67,68 +108,17 @@ For each use metric we graph the percent of titles within each provider's packag
 
 ```{r derive}
 # Generate JR80, JR90, JR95 measures using jr1 (all 2017 downloads), jr5 (current year 2017 downloads), references, publications
-highuse <- journal %>% 
-  select(journal, provider, type, jr1, jr5, cites, pubs, synth, scopus, domain, field, jid) %>% 
-  filter(type == "Journal") %>% 
-  mutate(provider = factor(provider),
-         big5 = if_else(provider %in% c("Springer", "Elsevier", "Wiley", "Sage", "Taylor & Francis"), "Yes", "No"),
-         els = if_else(provider == "Elsevier", "Yes", "No")) %>% 
-  mutate(jr1 = as.integer(jr1), jr5 = as.integer(jr5)) %>% 
-  group_by(provider) %>% 
-  arrange(provider, desc(jr1)) %>% 
-  mutate(cum_jr1 = cumsum(jr1),
-         prov_jr1 = max(cum_jr1, na.rm=T),
-         cum_jr1_per = (cum_jr1/prov_jr1)*100,
-         use_jr1 = case_when(cum_jr1_per <= 80 ~ "JR80 Titles",
-                             cum_jr1_per > 80 & cum_jr1_per <= 90 ~ "JR90 Titles",
-                             cum_jr1_per > 90 & cum_jr1_per <= 95 ~ "JR95 Titles",
-                             TRUE ~ "Remaining Titles")) %>% 
-  arrange(provider, desc(jr5)) %>% 
-  mutate(cum_jr5 = cumsum(jr5),
-         prov_jr5 = max(cum_jr5, na.rm=T),
-         cum_jr5_per = (cum_jr5/prov_jr5)*100,
-         use_jr5 = case_when(cum_jr5_per <= 80 ~ "JR80 Titles",
-                             cum_jr5_per > 80 & cum_jr5_per <= 90 ~ "JR90 Titles",
-                             cum_jr5_per > 90 & cum_jr5_per <= 95 ~ "JR95 Titles",
-                             TRUE ~ "Remaining Titles")) %>% 
-  arrange(provider, desc(cites)) %>% 
-  mutate(cum_refs = cumsum(cites),
-         prov_refs = max(cum_refs, na.rm=T),
-         cum_refs_per = (cum_refs/prov_refs)*100,
-         use_refs = case_when(cum_refs_per <= 80 ~ "JR80 Titles",
-                             cum_refs_per > 80 & cum_refs_per <= 90 ~ "JR90 Titles",
-                             cum_refs_per > 90 & cum_refs_per <= 95 ~ "JR95 Titles",
-                             TRUE ~ "Remaining Titles")) %>% 
-  arrange(provider, desc(pubs)) %>% 
-  mutate(cum_pubs = cumsum(pubs),
-         prov_pubs = max(cum_pubs, na.rm=T),
-         cum_pubs_per = (cum_pubs/prov_pubs)*100,
-         use_pubs = case_when(cum_pubs_per <= 80 ~ "JR80 Titles",
-                             cum_pubs_per > 80 & cum_pubs_per <= 90 ~ "JR90 Titles",
-                             cum_pubs_per > 90 & cum_pubs_per <= 95 ~ "JR95 Titles",
-                             TRUE ~ "Remaining Titles"))  
+highuse <- highuse_fn(group_var = provider)
+
 ```
 
 ### 1a. High-use Journals by All Article Downloads
 ```{r}
 # plot use_jr1 for big 5
-highuse_counts <- highuse %>%
-  mutate(use_jr1 = factor(use_jr1, levels = c("JR80 Titles", "JR90 Titles", "JR95 Titles", "Remaining Titles"))) %>% 
-  filter(big5 == "Yes") %>% count(provider, use_jr1) %>% 
-  mutate(pct=n/sum(n), ypos = cumsum(pct))
-  
-highuse_counts %>% 
-  ggplot(aes(x = provider, y = pct, fill = fct_rev(use_jr1))) +
-  geom_col() +
-  scale_y_continuous(labels = scales::percent) +
-  scale_fill_brewer(type = 'seq', palette = 'BuPu') +
-  labs(title = "Percentage of Titles in High Use Journals",
-       subtitle = "By All Downloads in 2017 (JR1)",
-       x = "", y = "Percent") +
-  geom_text(aes(label=paste0(n), y=ypos - 0.05)) +
-  guides(fill = guide_legend(reverse=TRUE, title = NULL)) +
-  theme(legend.position = "bottom") +
-  coord_flip()
+fig1(use_jr1, 
+     provider,
+     title = "Percentage of Titles in High Use Journals",
+     subtitle = "By All Downloads in 2017 (JR1)")
 ```
 
 Among Elsevier journals, `r highuse_counts[1,3]` or `r sprintf("%1.1f", highuse_counts[1,4]*100)`% of the titles are among the journals that make up 80% of downloads at UVA in 2017. Another `r highuse_counts[2,3]` titles, or `r sprintf("%1.1f", (highuse_counts[1,4] + highuse_counts[2,4])*100)`% overall, are among the journals that make up 90% of downloads at UVA. Including journals that make up 95% of downlaods adds another `r highuse_counts[3,3]` titles from Elsevier, or `r sprintf("%1.1f", (highuse_counts[1,4] + highuse_counts[2,4] + highuse_counts[3,4])*100)`% of the titles in the Elsevier package. Finally, `r highuse_counts[4,3]` journals in Elsevier's package, or `r  sprintf("%1.1f", highuse_counts[4,4]*100)`%, are not among the most highly-used journals at UVA by this metric.
@@ -138,23 +128,11 @@ The pattern for Springer is similar to that of Elsevier. Taylor & Francis and Wi
 ### 1b. High-use Journals by Current Year Article Downloads
 ```{r}
 # plot use_jr5 for big 5
-highuse_counts <- highuse %>%
-  mutate(use_jr5 = factor(use_jr5, levels = c("JR80 Titles", "JR90 Titles", "JR95 Titles", "Remaining Titles"))) %>% 
-  filter(big5 == "Yes") %>% count(provider, use_jr5) %>% 
-  mutate(pct=n/sum(n), ypos = cumsum(pct))
+fig1(use_jr5, 
+     provider,
+     title = "Percentage of Titles in High Use Journals",
+     subtitle = "By Current Year Downloads in 2017 (JR5)")
 
-highuse_counts %>% 
-  ggplot(aes(x = provider, y = pct, fill = fct_rev(use_jr5))) +
-  geom_col() +
-  scale_y_continuous(labels = scales::percent) +
-  scale_fill_brewer(type = 'seq', palette = 'BuPu') +
-  labs(title = "Percentage of Titles in High Use Journals",
-       subtitle = "By Current Year Downloads in 2017 (JR5)",
-       x = "", y = "Percent") +
-  geom_text(aes(label=paste0(n), y=ypos - 0.04)) +
-  guides(fill = guide_legend(reverse=TRUE, title = NULL)) +
-  theme(legend.position = "bottom") +
-  coord_flip()
 ```
 
 Looking at only downloads of articles from published in the current year, among Elsevier journals, `r highuse_counts[1,3]` or `r sprintf("%1.1f", highuse_counts[1,4]*100)`% of the titles are among the journals that make up 80% of use at UVA. Another `r highuse_counts[2,3]` titles, or `r sprintf("%1.1f", (highuse_counts[1,4] + highuse_counts[2,4])*100)`% overall, are among the journals that make up 90% of current year downloads within Elsevier; and an additional `r highuse_counts[3,3]` titles from Elsevier, or `r sprintf("%1.1f", (highuse_counts[1,4] + highuse_counts[2,4] + highuse_counts[3,4])*100)`% of the titles in the Elsevier package, account for 95% of use.  `r highuse_counts[4,3]` journals in Elsevier's package, or `r  sprintf("%1.1f", highuse_counts[4,4]*100)`%, are not among the most highly-used journals at UVA by this metric.
@@ -164,23 +142,10 @@ Both Springer and Wiley have similar ratios of high-use journals by current year
 ### 1c. High-use Journals by References from UVA Authors
 ```{r}
 # plot use_refs for big 5
-highuse_counts <- highuse %>%
-  mutate(use_refs = factor(use_refs, levels = c("JR80 Titles", "JR90 Titles", "JR95 Titles", "Remaining Titles"))) %>% 
-  filter(big5 == "Yes") %>% count(provider, use_refs) %>% 
-  mutate(pct=n/sum(n), ypos = cumsum(pct))
-
-highuse_counts %>% 
-  ggplot(aes(x = provider, y = pct, fill = fct_rev(use_refs))) +
-  geom_col() +
-  scale_y_continuous(labels = scales::percent) +
-  scale_fill_brewer(type = 'seq', palette = 'BuPu') +
-  labs(title = "Percentage of Titles in High Use Journals",
-       subtitle = "By References by UVA Authors",
-       x = "", y = "Percent") +
-  geom_text(aes(label=paste0(n), y=ypos - 0.035)) +
-  guides(fill = guide_legend(reverse=TRUE, title = NULL)) +
-  theme(legend.position = "bottom") +
-  coord_flip()
+fig1(use_refs, 
+     provider,
+     title = "Percentage of Titles in High Use Journals",
+     subtitle = "By References by UVA Authors")
 ```
 
 Measuring highly-used journals by focusing on the journals that UVA researchers have cited in the last 10 years shrinks the pool of titles categorized as high use. Among Elsevier journals, `r highuse_counts[1,3]` or `r sprintf("%1.1f", highuse_counts[1,4]*100)`% of the titles are among the journals that make up 80% of references by researchers at UVA. Using the journals that make up 90% of references adds `r highuse_counts[2,3]` Elsevier titles, or `r sprintf("%1.1f", (highuse_counts[1,4] + highuse_counts[2,4])*100)`% of the package overall. Looking at the journals that make up 95% of references adds an additional `r highuse_counts[3,3]` titles from Elsevier, or `r sprintf("%1.1f", (highuse_counts[1,4] + highuse_counts[2,4] + highuse_counts[3,4])*100)`% of the titles in the Elsevier package. `r highuse_counts[4,3]` journals in Elsevier's package, or `r  sprintf("%1.1f", highuse_counts[4,4]*100)`%, are not among the most highly-used journals at UVA by this metric.
@@ -188,23 +153,59 @@ Measuring highly-used journals by focusing on the journals that UVA researchers 
 ### 1d. High-use Journals by UVA-Authored Publications
 ```{r}
 # plot use_pubs for big 5
-highuse_counts <- highuse %>%
-  mutate(use_pubs = factor(use_pubs, levels = c("JR80 Titles", "JR90 Titles", "JR95 Titles", "Remaining Titles"))) %>% 
-  filter(big5 == "Yes") %>% count(provider, use_pubs) %>% 
-  mutate(pct=n/sum(n), ypos = cumsum(pct))
-
-highuse_counts %>% 
-  ggplot(aes(x = provider, y = pct, fill = fct_rev(use_pubs))) +
-  geom_col() +
-  scale_y_continuous(labels = scales::percent) +
-  scale_fill_brewer(type = 'seq', palette = 'BuPu') +
-  labs(title = "Percentage of Titles in High Use Journals",
-       subtitle = "By UVA Authored Papers",
-       x = "", y = "Percent") +
-  geom_text(aes(label=paste0(n), y=ypos - 0.03)) +
-  guides(fill = guide_legend(reverse=TRUE, title = NULL)) +
-  theme(legend.position = "bottom") +
-  coord_flip()
+fig1(use_pubs, 
+     provider,
+     title = "Percentage of Titles in High Use Journals",
+     subtitle = "By UVA Authored Papers")
 ```
 
 Focusing on the journals UVA researchers have published in over the last 10 years, `r highuse_counts[1,3]` or `r sprintf("%1.1f", highuse_counts[1,4]*100)`% of Elsevier titles are among the journals that make up 80% of publications by UVA authors. The JR90 measure expands that to an additional `r highuse_counts[2,3]` Elsevier titles, or `r sprintf("%1.1f", (highuse_counts[1,4] + highuse_counts[2,4])*100)`% of the package; the JR95 measure expands that to `r highuse_counts[3,3]` additional Elsevier titles, or `r sprintf("%1.1f", (highuse_counts[1,4] + highuse_counts[2,4] + highuse_counts[3,4])*100)`% of the titles in the Elsevier package. `r highuse_counts[4,3]` journals in Elsevier's package, or `r  sprintf("%1.1f", highuse_counts[4,4]*100)`%, are not among the most highly-used journals at UVA by this metric.
+
+## Elsevier Freedom versus Elsevier Subscribed
+
+Same plots as above but with Elsevier broken down by Freedom collection and Subscribed collection. The Freedom Collection is a list of ~1850 active titles (2350 titles in all, including renamed, transferred, discontinued and forthcoming titles) that any institution subscribing to Science Direct Complete gets access to.
+
+```{r derive2}
+# Big 5 with Elsevier broken down by Subscribed and Freedom
+highuse <- highuse_fn(group_var = provider2)
+```
+
+
+### 1e. High-use Journals by All Article Downloads
+```{r}
+fig1(use_jr1, 
+     provider2,
+     title = "Percentage of Titles in High Use Journals",
+     subtitle = "By All Downloads in 2017 (JR1)")
+```
+
+
+### 1f. High-use Journals by Current Year Article Downloads
+
+```{r}
+fig1(use_jr5, 
+     provider2,
+     title = "Percentage of Titles in High Use Journals",
+     subtitle = "By Current Year Downloads in 2017 (JR5)")
+
+```
+
+### 1g. High-use Journals by References from UVA Authors
+
+```{r}
+fig1(use_refs, 
+     provider2,
+     title = "Percentage of Titles in High Use Journals",
+     subtitle = "By References by UVA Authors")
+
+```
+
+### 1h. High-use Journals by UVA-Authored Publications
+
+```{r}
+fig1(use_pubs, 
+     provider2,
+     title = "Percentage of Titles in High Use Journals",
+     subtitle = "By UVA Authored Papers")
+```
+
