--- a/R/figure2.Rmd
+++ b/R/figure2.Rmd
@@ -11,46 +11,8 @@ knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
 ```{r setup}
 library(tidyverse)
 library(scales)
-library(readxl)
 
-# read in original unedited data
-journal <- read_excel("../1science/1figr_U_Virginia_Original.xlsx", 
-                      sheet = 4, 
-                      skip = 8)
-
-# rename variables in journal
-names(journal) <- c("sort", "journal", "issn", "provider", "type", "fig1", "jr1", "jr5", 
-                         "cites", "pubs", "synth", "jtier", "subtier", "dupes",
-                         "oa", "oaper", "fig2", "scopus", "arif", "domain", "field", "subfield", 
-                         "pub2008", "pub2009", "pub2010", "pub2011", "pub2012", "pub2013", "pub2014",
-                         "pub2015", "pub2016", "pub2017", "cite2008", "cite2009", "cite2010", "cite2011",
-                         "cite2012", "cite2013", "cite2014", "cite2015", "cite2016", "cite2017", 
-                         "oa2008", "oa2009", "oa2010", "oa2011", "oa2012", "oa2013", "oa2014", "oa2015", 
-                         "oa2016", "oa2017", "oaper2008", "oaper2009", "oaper2010", "oaper2011", "oaper2012",
-                         "oaper2013", "oaper2014", "oaper2015", "oaper2016", "oaper2017", "scopus2008",
-                         "scopus2009", "scopus2010", "scopus2011", "scopus2012", "scopus2013", "scopus2014",
-                         "scopus2015", "scopus2016", "scopus2017", "jr12015", "jr12016", "jr12017", "jr12018",
-                         "jid", "journalname")
-
-
-# derive Current Year Use Percentage - currentper
-# derive % of papers referenced by UVA - citeper
-# derive UVA Papers % of total - pubsper
-
-journal <- journal %>% 
-  mutate(jr5 = if_else(jr5 == "N/A", NA_character_, jr5),
-         jr1 = if_else(jr1 == "N/A", NA_character_, jr1),
-         currentper = as.numeric(jr5)/as.numeric(jr1),
-         citeper = if_else(!is.finite(cites/scopus),0,cites/scopus),
-         pubsper = if_else(!is.finite(pubs/scopus),0,pubs/scopus)) 
-
-# derive Downloads JR1 2015-2018
-journal <- journal %>% 
-  mutate_if(str_detect(names(journal), pattern = "^jr120"), 
-            ~as.numeric(if_else(. == "N/A", "0", .))) %>% 
-  mutate(jr12015_2018 = jr12015 + jr12016 + jr12017 + jr12018) %>% 
-  select(sort:jr5, currentper, cites, citeper, pubs, pubsper,
-         synth:jr12018,jr12015_2018,jid, journalname)
+journal <- readRDS("../1science/journal.rds")
   
 ```
 
@@ -74,7 +36,7 @@ journal_jr5ratio <- journal %>%
          els = if_else(provider == "Elsevier", "Yes", "No")) 
 ```
 
-### 2. Current Year Downloads as Percent of All 2017 Downloads
+### 2a. Current Year Downloads as Percent of All 2017 Downloads
 
 ```{r}
 # JR5 ratio for big 5
@@ -92,4 +54,41 @@ journal_jr5ratio %>% filter(big5 == "Yes") %>%
 
 About 15% of downloaded articles are from the current year for Sage, Wiley and Taylor & Francis; Elsevier and Springer see slightly higher use of recent scholarship at `r round(journal_jr5ratio %>% filter(provider == "Elsevier") %>% select(jr5per), 1)`% and `r round(journal_jr5ratio %>% filter(provider == "Springer") %>% select(jr5per), 1)`%, respectively.
 
+## Elsevier Freedom versus Elsevier Subscribed
+
+### 2b. Current Year Downloads as Percent of All 2017 Downloads
+
+Same plots as above but with Elsevier broken down by Freedom collection and Subscribed collection. The Freedom Collection is a list of ~1850 active titles (2350 titles in all, including renamed, transferred, discontinued and forthcoming titles) that any institution subscribing to Science Direct Complete gets access to.
+
+```{r}
+# Need to derive package level numbers for Elsevier Freedom and Subscribed
+tmp <- journal %>% 
+  filter(provider == "Elsevier" & type == "Journal") %>% 
+  group_by(provider2) %>% 
+  summarise(jr1 = sum(as.integer(jr1), na.rm = T),
+            jr5 = sum(as.integer(jr5), na.rm = T),
+            jr5per = (jr5/jr1)*100) %>% 
+  rename(provider = provider2) %>% 
+  mutate(big5 = "Yes", els = "Yes", type = "Package") %>% 
+  select(provider, type, everything()) 
+
+# Plot
+journal_jr5ratio %>% 
+  filter(big5 == "Yes") %>% 
+  mutate(provider = as.character(provider)) %>% 
+  filter(provider != "Elsevier") %>% 
+  bind_rows(tmp) %>% 
+  mutate(provider = factor(provider),
+         provider = fct_reorder(provider, desc(jr5per))) %>% 
+  ggplot(aes(x = provider, y = jr5per, color = els)) + 
+  geom_segment(aes(x = provider, xend = provider, y = 0, yend = jr5per), color = "grey", size = 1) +
+  geom_point(size = 5) +
+  scale_color_manual(values = c("orange", "blue")) +
+  labs(title = "Percent of Articles Downloaded in 2017 from Current Year",
+       subtitle = "By Provider",
+       x = "", y = "Percent") +
+  theme(legend.position = "none") +
+  coord_flip() 
+
+```
 
