--- a/R/figure3.Rmd
+++ b/R/figure3.Rmd
@@ -13,44 +13,7 @@ library(tidyverse)
 library(scales)
 library(readxl)
 
-# read in original unedited data
-journal <- read_excel("../1science/1figr_U_Virginia_Original.xlsx", 
-                      sheet = 4, 
-                      skip = 8)
-
-# rename variables in journal
-names(journal) <- c("sort", "journal", "issn", "provider", "type", "fig1", "jr1", "jr5", 
-                    "cites", "pubs", "synth", "jtier", "subtier", "dupes",
-                    "oa", "oaper", "fig2", "scopus", "arif", "domain", "field", "subfield", 
-                    "pub2008", "pub2009", "pub2010", "pub2011", "pub2012", "pub2013", "pub2014",
-                    "pub2015", "pub2016", "pub2017", "cite2008", "cite2009", "cite2010", "cite2011",
-                    "cite2012", "cite2013", "cite2014", "cite2015", "cite2016", "cite2017", 
-                    "oa2008", "oa2009", "oa2010", "oa2011", "oa2012", "oa2013", "oa2014", "oa2015", 
-                    "oa2016", "oa2017", "oaper2008", "oaper2009", "oaper2010", "oaper2011", "oaper2012",
-                    "oaper2013", "oaper2014", "oaper2015", "oaper2016", "oaper2017", "scopus2008",
-                    "scopus2009", "scopus2010", "scopus2011", "scopus2012", "scopus2013", "scopus2014",
-                    "scopus2015", "scopus2016", "scopus2017", "jr12015", "jr12016", "jr12017", "jr12018",
-                    "jid", "journalname")
-
-
-# derive Current Year Use Percentage - currentper
-# derive % of papers referenced by UVA - citeper
-# derive UVA Papers % of total - pubsper
-
-journal <- journal %>% 
-  mutate(jr5 = if_else(jr5 == "N/A", NA_character_, jr5),
-         jr1 = if_else(jr1 == "N/A", NA_character_, jr1),
-         currentper = as.numeric(jr5)/as.numeric(jr1),
-         citeper = if_else(!is.finite(cites/scopus),0,cites/scopus),
-         pubsper = if_else(!is.finite(pubs/scopus),0,pubs/scopus)) 
-
-# derive Downloads JR1 2015-2018
-journal <- journal %>% 
-  mutate_if(str_detect(names(journal), pattern = "^jr120"), 
-            ~as.numeric(if_else(. == "N/A", "0", .))) %>% 
-  mutate(jr12015_2018 = jr12015 + jr12016 + jr12017 + jr12018) %>% 
-  select(sort:jr5, currentper, cites, citeper, pubs, pubsper,
-         synth:jr12018,jr12015_2018,jid, journalname)
+journal <- readRDS("../1science/journal.rds")
 
 # read in supplemental cost data
 cost <- read_excel("../1science/1figr_U_Virginia_edit_Supp_Data.xlsx")
@@ -119,3 +82,86 @@ journal_big5 %>%
 ```
 
 Using only current-year downloads generates a higher cost-per-use estimate. This value may be more meaningful, as it reflects only the use of new content added by the current year’s subscription.
+
+## Elsevier Freedom versus Elsevier Subscribed
+
+Same plots as above but with Elsevier broken down by Freedom collection and Subscribed collection. The Freedom Collection is a list of ~1850 active titles (2350 titles in all, including renamed, transferred, discontinued and forthcoming titles) that any institution subscribing to Science Direct Complete gets access to.
+
+### 3a. Cost per Download, all 2017 downloads
+
+```{r}
+# Need to derive package level numbers for Elsevier Freedom and Subscribed
+tmp <- journal %>% 
+  filter(provider == "Elsevier" & type == "Journal") %>% 
+  group_by(provider2) %>% 
+  summarise(jr1 = sum(as.integer(jr1), na.rm = T),
+            jr5 = sum(as.integer(jr5), na.rm = T)) %>% 
+  rename(provider = provider2) %>% 
+  mutate(els = "Yes") %>% 
+  left_join(cost, by = "provider") %>% 
+  mutate(cpd_jr1 = cost/jr1,
+         cpd_jr5 = cost/jr5)
+
+# bind rows to journal_big5
+journal_big6 <- journal_big5 %>% bind_rows(tmp) %>% 
+  filter(provider != "Elsevier")
+
+
+# CPD-JR1 for Big 6
+journal_big6 %>% 
+  mutate(provider = factor(provider),
+         provider = fct_reorder(provider, desc(cpd_jr1))) %>% 
+  ggplot(aes(x = provider, y = cpd_jr1, color = els)) + 
+  geom_segment(aes(x = provider, xend = provider, y = 0, yend = cpd_jr1), color = "grey", size = 1) +
+  geom_point(size = 5) +
+  scale_y_continuous(labels = scales::dollar) +
+  scale_color_manual(values = c("orange", "blue")) +
+  labs(title = "2017 Cost Per Download, All Downloads/JR1",
+       subtitle = "(Package Cost / # JR1 Downloads)",
+       x = "", y = "Dollars") +
+  geom_text(aes(label = dollar(round(cpd_jr1, 2))), nudge_x = -.3, color = "black", size = 3) +
+  theme(legend.position = "none") +
+  coord_flip() 
+
+
+
+```
+
+
+
+### 3b. Cost per Download, current year 2017 downloads
+
+```{r}
+journal_big6 %>% 
+  mutate(provider = factor(provider),
+         provider = fct_reorder(provider, desc(cpd_jr5))) %>% 
+  ggplot(aes(x = provider, y = cpd_jr5, color = els)) + 
+  geom_segment(aes(x = provider, xend = provider, y = 0, yend = cpd_jr5), color = "grey", size = 1) +
+  geom_point(size = 5) +
+  scale_y_continuous(labels = scales::dollar) +
+  scale_color_manual(values = c("orange", "blue")) +
+  labs(title = "2017 Cost Per Download, Current Year Downloads/JR5",
+       subtitle = "(Package Cost / # JR5 Downloads)",
+       x = "", y = "Dollars") +
+  geom_text(aes(label = dollar(round(cpd_jr5, 2))), nudge_x = -.3, color = "black", size = 3) +
+  theme(legend.position = "none") +
+  coord_flip() 
+
+# Figure with just Els Free and Subscribed
+journal_big6 %>% 
+  mutate(provider = factor(provider),
+         provider = fct_reorder(provider, desc(cpd_jr5))) %>% 
+  filter(str_detect(provider, "Elsevier")) %>% 
+  ggplot(aes(x = provider, y = cpd_jr5)) + 
+  geom_segment(aes(x = provider, xend = provider, y = 0, yend = cpd_jr5), color = "grey", size = 1) +
+  geom_point(size = 5, color = "blue") +
+  scale_y_continuous(labels = scales::dollar) +
+  scale_color_manual(values = c("orange", "blue")) +
+  labs(title = "2017 Cost Per Download, Current Year Downloads/JR5",
+       subtitle = "(Package Cost / # JR5 Downloads)",
+       x = "", y = "Dollars") +
+  geom_text(aes(label = dollar(round(cpd_jr5, 2))), nudge_x = -.3, color = "black", size = 3) +
+  theme(legend.position = "none") +
+  coord_flip() 
+```
+
