--- a/R/figure8.Rmd
+++ b/R/figure8.Rmd
@@ -115,7 +115,9 @@ els_group2 <- els %>%
             refs = sum(cites, na.rm = TRUE),
             pubs = sum(pubs, na.rm = TRUE)) %>% 
   ungroup() %>% 
-  mutate(domain = factor(discipline))
+  mutate(domain = factor(discipline)) %>% 
+  filter(provider2 != "Elsevier Unmatched") %>% 
+  mutate_if(is.numeric, as.integer)
 
 # Two colors taken from brewer.pal(n = 7, name = "BuPu")
 pal <- c("#8C96C6", "#6E016B")
@@ -146,11 +148,11 @@ plot_fn2 <- function(x, title){
     ggplot(aes(x = !! x, y = domain)) +
     geom_line(aes(group = domain)) +
     geom_point(aes(color = provider2), size = 2) +
-    geom_text(data = right_label, aes(color = provider2, label = scales::comma(!! x)),
+    geom_text(data = right_label, aes(color = provider2, label = scales::comma(!! x, accuracy = 1)),
               size = 3, hjust = -.5, show.legend = F) +
-    geom_text(data = left_label, aes(color = provider2, label = scales::comma(!! x)),
+    geom_text(data = left_label, aes(color = provider2, label = scales::comma(!! x, accuracy = 1)),
               size = 3, hjust = 1.5, show.legend = F) +
-    scale_x_continuous(labels = scales::comma, limits = c(ymin, ymax)) +
+    scale_x_continuous(labels = scales::comma, limits = c(round(ymin), round(ymax))) +
     scale_color_manual("", values = pal) +
     theme(legend.position = "bottom") +
     labs(title = title,
